2009-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Makefile.am:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastEpisodePage.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.addin.xml: Add new
	information tab to the track editor/properties, only shown for podcast
	episodes, that shows the description, author, published date, etc.

2009-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/PodcastActions.cs:
	Make unsubscribe, download episodes, and refresh options work even if
	multiple podcasts (feeds) selected

2009-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* libbanshee/Makefile.am:
	* libbanshee/banshee-bpmdetector.c: 
	* build/build.environment.mk:
	* configure.ac:
	* src/Extensions/Banshee.Bpm/Banshee.Bpm.addin.xml:
	* src/Extensions/Banshee.Bpm/Banshee.Bpm.csproj:
	* src/Extensions/Banshee.Bpm/Banshee.Bpm/BpmDetectJob.cs:
	* src/Extensions/Banshee.Bpm/Banshee.Bpm/BpmEntry.cs:
	* src/Extensions/Banshee.Bpm/Banshee.Bpm/BpmService.cs:
	* src/Extensions/Banshee.Bpm/Banshee.Bpm/BpmTapAdapter.cs:
	* src/Extensions/Banshee.Bpm/Banshee.Bpm/BpmTrackEditorModifier.cs:
	* src/Extensions/Banshee.Bpm/Makefile.am:
	* src/Extensions/Makefile.am: New extension that adds a preference (disabled
	by default) to automatically detect the BPM for all songs, and modified
	the track editor dialog's BPM entry, adding a button to auto detect the
	BPM, a button to play the song being edited, and a button to tap out the
	BPM manually.  This feature uses the GStreamer bpmdetect element.

	* src/Backends/Banshee.GStreamer/Banshee.GStreamer.addin.xml:
	* src/Backends/Banshee.GStreamer/Banshee.GStreamer/BpmDetector.cs:
	* src/Backends/Banshee.GStreamer/Makefile.am:
	* src/Core/Banshee.Services/Makefile.am:
	* src/Core/Banshee.Services/Banshee.Services.addin.xml:
	* src/Core/Banshee.Services/Banshee.MediaEngine/IBpmDetector.cs: Support