@@ -231,12 +231,7 @@ namespace Banshee.Lastfm.Radio
                 ClearChildSources ();
                 sorting = true;
                 foreach (StationSource child in StationSource.LoadAll (this, Account.UserName)) {
-                    if (Connection.Subscriber ||
-                            (!child.Type.SubscribersOnly &&
-                                !(child.Type == StationType.Personal && child.Arg != null && child.Arg.Trim().ToLower() == last_username.Trim().ToLower())))
-                    {
-                        AddChildSource (child);
-                    }
+                    AddChildSource (child);
                 }
                 sorting = false;
                 SortChildSources ();
